// pob2.proto
// Path of Building 2 - Web Edition
// Proto definitions for network/storage types
// Source of truth for all data structures

syntax = "proto3";

package pob2;

import "google/protobuf/timestamp.proto";

// ============================================================================
// CHARACTER & BUILD
// ============================================================================

message Build {
  string id = 1;  // REQUIRED - unique build identifier

  optional string name = 2;
  optional CharacterClass character_class = 3;
  optional string ascendancy = 4;
  optional int32 level = 5;

  // Passive tree
  repeated string allocated_node_ids = 10;
  map<string, string> mastery_selections = 11;  // node_id -> effect_id

  // Equipped items by slot
  map<string, Item> equipped_items = 20;

  // Skill configuration
  repeated SkillGroup skill_groups = 30;

  // Build configuration options
  optional BuildConfig config = 40;

  // Metadata
  optional string notes = 50;
  optional string build_code = 51;  // Base64 encoded for sharing
  optional google.protobuf.Timestamp created_at = 52;
  optional google.protobuf.Timestamp updated_at = 53;
}

message BuildConfig {
  // Enemy configuration
  optional int32 enemy_level = 1;
  optional bool enemy_is_boss = 2;
  optional string enemy_type = 3;

  // Buff configuration
  optional bool power_charges = 10;
  optional bool frenzy_charges = 11;
  optional bool endurance_charges = 12;
  optional int32 power_charge_count = 13;
  optional int32 frenzy_charge_count = 14;
  optional int32 endurance_charge_count = 15;

  // Combat state
  optional bool is_leeching = 20;
  optional bool is_on_low_life = 21;
  optional bool is_on_full_life = 22;
  optional bool enemy_is_chilled = 23;
  optional bool enemy_is_frozen = 24;
  optional bool enemy_is_shocked = 25;
  optional bool enemy_is_ignited = 26;
}

// ============================================================================
// PASSIVE TREE
// ============================================================================

message PassiveNode {
  string id = 1;  // REQUIRED - node hash from GGG tree data

  optional string name = 2;
  optional NodeType node_type = 3;
  repeated string stats = 4;  // Stat descriptions
  repeated string linked_ids = 5;  // Connected node IDs

  // Position
  optional Position position = 6;
  optional int32 group = 7;
  optional int32 orbit = 8;
  optional int32 orbit_index = 9;

  // Ascendancy
  optional string ascendancy_name = 10;
  optional bool is_ascendancy_start = 11;

  // Visual
  optional string icon = 12;
  optional bool is_proxy = 13;

  // Class start
  optional CharacterClass class_start_index = 14;
}

message PassiveTree {
  string version = 1;  // Tree version/patch

  repeated PassiveNode nodes = 2;
  repeated NodeGroup groups = 3;

  // Class start positions
  map<int32, string> class_start_nodes = 10;  // class_id -> node_id

  // Constants
  optional TreeConstants constants = 20;
}

message NodeGroup {
  int32 id = 1;
  optional Position position = 2;
  repeated string node_ids = 3;
  optional bool is_proxy = 4;
}

message TreeConstants {
  repeated int32 orbit_radii = 1;
  repeated int32 skills_per_orbit = 2;
}

message Position {
  float x = 1;
  float y = 2;
}

// ============================================================================
// ITEMS
// ============================================================================

message Item {
  string id = 1;  // REQUIRED - unique item identifier

  // Identity
  optional string name = 2;
  optional string base_name = 3;
  optional string type_line = 4;
  optional ItemRarity rarity = 5;
  optional ItemType item_type = 6;

  // Properties
  optional int32 item_level = 10;
  optional int32 quality = 11;
  optional bool corrupted = 12;
  optional bool mirrored = 13;
  optional bool fractured = 14;

  // Requirements
  optional int32 required_level = 20;
  optional int32 required_str = 21;
  optional int32 required_dex = 22;
  optional int32 required_int = 23;

  // Sockets & Runes (PoE2)
  repeated Socket sockets = 30;
  repeated string runes = 31;

  // Modifiers
  repeated string implicit_mods = 40;
  repeated string explicit_mods = 41;
  repeated string enchant_mods = 42;
  repeated string rune_mods = 43;
  repeated string crafted_mods = 44;

  // Weapon data (if applicable)
  optional WeaponData weapon_data = 50;

  // Armour data (if applicable)
  optional ArmourData armour_data = 51;

  // Flask data (if applicable)
  optional FlaskData flask_data = 52;

  // Jewel data (if applicable)
  optional JewelData jewel_data = 53;
}

message Socket {
  optional string color = 1;  // R, G, B, W, A (abyss)
  optional int32 group = 2;   // Link group
}

message WeaponData {
  optional int32 physical_min = 1;
  optional int32 physical_max = 2;
  optional int32 fire_min = 3;
  optional int32 fire_max = 4;
  optional int32 cold_min = 5;
  optional int32 cold_max = 6;
  optional int32 lightning_min = 7;
  optional int32 lightning_max = 8;
  optional int32 chaos_min = 9;
  optional int32 chaos_max = 10;
  optional float attack_speed = 11;
  optional float crit_chance = 12;  // Percentage * 100 (e.g., 650 = 6.50%)
  optional int32 range = 13;
}

message ArmourData {
  optional int32 armour = 1;
  optional int32 evasion = 2;
  optional int32 energy_shield = 3;
  optional int32 ward = 4;
  optional int32 block = 5;  // Percentage * 100
}

message FlaskData {
  optional int32 life_recovery = 1;
  optional int32 mana_recovery = 2;
  optional int32 duration = 3;  // Milliseconds
  optional int32 charges_used = 4;
  optional int32 charges_max = 5;
}

message JewelData {
  optional int32 radius = 1;
  optional string limit = 2;  // Limit text
  optional bool is_cluster = 3;
  optional int32 cluster_size = 4;  // Small, Medium, Large
}

// ============================================================================
// SKILLS & GEMS
// ============================================================================

message SkillGroup {
  string id = 1;  // REQUIRED

  optional string label = 2;
  optional bool enabled = 3;
  optional bool include_in_full_dps = 4;
  optional string slot = 5;  // Item slot this skill group is in

  repeated GemInstance gems = 10;
}

message GemInstance {
  string id = 1;  // REQUIRED - references gem data

  optional string gem_id = 2;  // Base gem ID from game data
  optional int32 level = 3;
  optional int32 quality = 4;
  optional bool enabled = 5;
  optional int32 count = 6;  // For support gems that can stack

  // Quality type (PoE2 has different quality types)
  optional GemQualityType quality_type = 10;
}

message Gem {
  string id = 1;  // REQUIRED - base gem identifier

  optional string name = 2;
  optional GemType gem_type = 3;
  optional string description = 4;

  // Requirements per level
  repeated GemLevel levels = 10;

  // Tags
  repeated string tags = 20;

  // Base stats
  optional int32 base_mana_cost = 30;
  optional int32 base_cast_time = 31;  // Milliseconds
  optional int32 base_cooldown = 32;   // Milliseconds
}

message GemLevel {
  int32 level = 1;
  optional int32 required_level = 2;
  optional int32 mana_cost = 3;
  optional int32 damage_effectiveness = 4;  // Percentage * 100
  // Additional stats per level stored as key-value
  map<string, int32> stats = 10;
}

// ============================================================================
// ENUMS
// ============================================================================

enum CharacterClass {
  CHARACTER_CLASS_UNKNOWN = 0;

  // PoE2 Classes (new)
  WARRIOR = 1;
  MONK = 2;
  SORCERESS = 3;
  MERCENARY = 4;
  HUNTRESS = 5;
  DRUID = 6;

  // PoE1 Classes (for compatibility)
  MARAUDER = 10;
  RANGER = 11;
  WITCH = 12;
  DUELIST = 13;
  TEMPLAR = 14;
  SHADOW = 15;
  SCION = 16;
}

enum NodeType {
  NODE_TYPE_UNKNOWN = 0;
  NODE_NORMAL = 1;
  NODE_NOTABLE = 2;
  NODE_KEYSTONE = 3;
  NODE_MASTERY = 4;
  NODE_SOCKET = 5;
  NODE_CLASS_START = 6;
  NODE_ASCEND_CLASS_START = 7;
}

enum ItemRarity {
  ITEM_RARITY_UNKNOWN = 0;
  RARITY_NORMAL = 1;
  RARITY_MAGIC = 2;
  RARITY_RARE = 3;
  RARITY_UNIQUE = 4;
}

enum ItemType {
  ITEM_TYPE_UNKNOWN = 0;

  // Weapons
  ONE_HAND_SWORD = 1;
  TWO_HAND_SWORD = 2;
  ONE_HAND_AXE = 3;
  TWO_HAND_AXE = 4;
  ONE_HAND_MACE = 5;
  TWO_HAND_MACE = 6;
  BOW = 7;
  CROSSBOW = 8;
  STAFF = 9;
  WAND = 10;
  DAGGER = 11;
  CLAW = 12;
  SCEPTRE = 13;
  QUARTERSTAFF = 14;  // PoE2
  SPEAR = 15;         // PoE2
  FLAIL = 16;         // PoE2

  // Armour
  HELMET = 20;
  BODY_ARMOUR = 21;
  GLOVES = 22;
  BOOTS = 23;
  SHIELD = 24;
  FOCUS = 25;  // PoE2 off-hand

  // Accessories
  AMULET = 30;
  RING = 31;
  BELT = 32;

  // Other
  FLASK = 40;
  JEWEL = 41;
  CHARM = 42;  // PoE2
  QUIVER = 43;
}

enum GemType {
  GEM_TYPE_UNKNOWN = 0;
  SKILL = 1;
  SUPPORT = 2;
  META = 3;  // PoE2 meta gems
}

enum GemQualityType {
  GEM_QUALITY_TYPE_UNKNOWN = 0;
  SUPERIOR = 1;
  ANOMALOUS = 2;
  DIVERGENT = 3;
  PHANTASMAL = 4;
}

// ============================================================================
// ITEM SLOTS
// ============================================================================

enum ItemSlot {
  ITEM_SLOT_UNKNOWN = 0;

  SLOT_WEAPON_1 = 1;
  SLOT_WEAPON_2 = 2;  // Off-hand / Shield / Focus
  SLOT_WEAPON_1_SWAP = 3;
  SLOT_WEAPON_2_SWAP = 4;

  SLOT_HELMET = 10;
  SLOT_BODY_ARMOUR = 11;
  SLOT_GLOVES = 12;
  SLOT_BOOTS = 13;

  SLOT_AMULET = 20;
  SLOT_RING_1 = 21;
  SLOT_RING_2 = 22;
  SLOT_BELT = 23;

  SLOT_FLASK_1 = 30;
  SLOT_FLASK_2 = 31;
  SLOT_FLASK_3 = 32;
  SLOT_FLASK_4 = 33;
  SLOT_FLASK_5 = 34;

  SLOT_JEWEL_1 = 40;
  SLOT_JEWEL_2 = 41;
  // ... more jewel slots as needed
}

// ============================================================================
// PATH OF LEVELING
// ============================================================================

message LevelingPath {
  string id = 1;                           // REQUIRED - unique identifier
  optional string build_id = 2;            // Reference to end-game Build (optional)
  optional string name = 3;
  optional CharacterClass class_id = 4;
  repeated Checkpoint checkpoints = 5;     // User-defined level milestones
  repeated LevelingStep steps = 6;         // Ordered actions
  optional string notes = 7;
  optional google.protobuf.Timestamp created_at = 8;
  optional google.protobuf.Timestamp updated_at = 9;
}

message Checkpoint {
  int32 level = 1;                         // User-defined level milestone
  repeated string allocated_passives = 2;  // Cumulative list of node IDs
  map<string, Item> equipment = 3;         // Slot -> Item mapping
  repeated SkillGroup gems = 4;            // Gem setup at this checkpoint
  optional StatSnapshot stats = 5;         // Calculated stats at this level
  optional string notes = 6;               // Checkpoint-specific notes
}

message LevelingStep {
  int32 order = 1;                         // Execution order
  optional StepTrigger trigger = 2;        // When to perform this step
  optional StepAction action = 3;          // What to do
  optional StatDelta stat_delta = 4;       // Impact on stats
  optional string rationale = 5;           // Why this step matters
}

message StepTrigger {
  StepTriggerType type = 1;
  optional string value = 2;               // Level number, quest name, or item name
}

message StepAction {
  StepActionType type = 1;
  optional string target_id = 2;           // Node ID, item ID, or gem ID
  optional string slot = 3;                // Item slot or socket position
  optional string details = 4;             // Additional context
}

message StatDelta {
  optional float dps_percent = 1;          // +/- percentage change
  optional float ehp_percent = 2;          // +/- percentage change
  optional float dps_absolute = 3;         // +/- absolute value
  optional float ehp_absolute = 4;         // +/- absolute value
  map<string, float> resistances = 5;      // Resistance changes
  map<string, float> other_stats = 6;      // Other stat changes
}

message StatSnapshot {
  optional float dps = 1;                  // Damage per second
  optional float ehp = 2;                  // Effective HP
  optional float life = 3;                 // Maximum life
  optional float mana = 4;                 // Maximum mana
  optional float energy_shield = 5;        // Maximum energy shield
  optional int32 fire_res = 6;             // Fire resistance (percentage)
  optional int32 cold_res = 7;             // Cold resistance (percentage)
  optional int32 lightning_res = 8;        // Lightning resistance (percentage)
  optional int32 chaos_res = 9;            // Chaos resistance (percentage)
  optional float attack_speed = 10;        // Attacks per second
  optional float cast_speed = 11;          // Casts per second
  optional float crit_chance = 12;         // Critical strike chance (percentage)
  optional float crit_multi = 13;          // Critical strike multiplier (percentage)
  map<string, float> other = 14;           // Additional stats
}

enum StepTriggerType {
  STEP_TRIGGER_TYPE_UNKNOWN = 0;
  TRIGGER_LEVEL = 1;                       // Reach a certain level
  TRIGGER_QUEST = 2;                       // Complete a quest
  TRIGGER_ITEM = 3;                        // Acquire an item
  TRIGGER_ZONE = 4;                        // Enter a zone
  TRIGGER_WAYPOINT = 5;                    // Reach a waypoint
}

enum StepActionType {
  STEP_ACTION_TYPE_UNKNOWN = 0;
  ACTION_ALLOCATE = 1;                     // Allocate passive node
  ACTION_EQUIP = 2;                        // Equip an item
  ACTION_SOCKET = 3;                       // Socket a gem
  ACTION_RESPEC = 4;                       // Respec passive nodes
  ACTION_VENDOR = 5;                       // Buy from vendor
  ACTION_CRAFT = 6;                        // Craft an item
  ACTION_USE_SKILL = 7;                    // Start using a skill
}
